# manutd-indexer

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  const.py  dipdup.yaml  docker-compose.yml  manager.py  pyproject.toml
.github/workflows/: build.yml
configs/: dipdup.compose.yaml  dipdup.sqlite.yaml  dipdup.swarm.yaml  replay.yaml
deploy/: .env.default  Dockerfile  compose.sqlite.yaml  compose.swarm.yaml  compose.yaml  sqlite.env.default  swarm.env.default
handlers/: big_map_controller.py  on_metadata_update.py  on_token_metadata_update.py
hooks/: on_reindex.py  on_restart.py  on_synchronized.py  resolve_task_manager.py
manutd_indexer/: dipdup.yaml
manutd_indexer/handlers/: big_map_controller.py  on_metadata_update.py  on_token_metadata_update.py
manutd_indexer/hooks/: on_reindex.py
manutd_indexer/models/: __init__.py
manutd_indexer/sql/on_reindex/: 00_prepare_db.sql  01_create_continous_aggregate._sql
manutd_indexer/types/mu_minter/tezos_big_maps/: assets_token_metadata_key.py  assets_token_metadata_value.py  metadata_key.py  metadata_value.py
models/: __init__.py
sql/on_reindex/: 00_prepare_db.sql
types/mu_minter/tezos_big_maps/: assets_token_metadata_key.py  assets_token_metadata_value.py  metadata_key.py  metadata_value.py
