[tool.poetry]
name = "manutd_indexer"
version = "0.0.1"
description = "A blockchain indexer built with DipDup"
authors = ["John Doe <john_doe@example.com>", ]


[tool.poetry.dependencies]
python = ">=3.12,<3.13"
dipdup = "8.0.0b5"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
ruff = "^0.5.2"
mypy = "^1.10.1"
ssort = "^0.13.0"
isort = "^5.13.2"


[tool.black]
line-length = 140
target-version = ['py312']
skip-string-normalization = true

[tool.ruff]
line-length = 140
target-version = 'py312'

[tool.ruff.lint]
extend-select = ["B", "C4", "FA", "G", "I", "PTH", "Q", "RET", "RUF", "TCH", "UP"]
flake8-quotes = { inline-quotes = "single", multiline-quotes = "double" }
isort = { force-single-line = true}

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
strict = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
